# mysql_protocol

./: .travis-ci.sh  .travis-ocaml.sh  .travis.yml  CHANGES.md  INSTALL.txt  META  Makefile  README.md  _tags  benchmarks.itarget  dune-project  examples.itarget  mysql_protocol.opam  opam  src.itarget  src.odocl  test.itarget
benchmarks/: bench.ml  bench_config.ml  bench_mysql_libc.ml  bench_mysql_protocol.ml
docs/: Mp_charset.html  Mp_client.html  Mp_data.html  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  type_Mp_charset.html  type_Mp_client.html  type_Mp_data.html
examples/: client.ml  run.ml
src/: dune  mp_authentication.ml  mp_binary.ml  mp_bitstring.ml  mp_capabilities.ml  mp_change_user.ml  mp_charset.ml  mp_charset.mli  mp_client.ml  mp_client.mli  mp_com.ml  mp_data.ml  mp_data.mli  mp_data_binary.ml  mp_data_process.ml  mp_data_simple.ml  mp_eof_packet.ml  mp_error_packet.ml  mp_execute.ml  mp_fetch.ml  mp_field.ml  mp_field_packet.ml  mp_handshake.ml  mp_ok_packet.ml  mp_ok_prepare_packet.ml  mp_packet.ml  mp_protocol.ml  mp_raw_data.ml  mp_result_packet.ml  mp_result_set_packet.ml  mp_string.ml  mysql_protocol.mlpack
test/: dune  fixture.mli  fixture_config.ml  fixture_latin1.ml  fixture_utf8.ml  test.ml  test_benchmark.ml  test_change_user.ml  test_client.ml  test_connect.ml  test_ping.ml  test_query.ml  test_query_auto_increment.ml  test_query_bad.ml  test_query_delete.ml  (+9 more)
(+1 files in other folders)
